--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
     <link rel="shortcut icon" href="images/favicon16.png" type="image/x-icon">
 
-    <title>custom github pages domain by kbatten</title>
+    <title>custom github pages domain</title>
   </head>
 
   <body>
